--- a/src/style.css
+++ b/src/style.css
@@ -88,6 +88,79 @@ header {
 
 /* MAIN SECTION (my work) --------------------------------------------------*/
 
+main {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+}
 
+.projects {
+    width: 100%;
+    display: grid;
+    gap: 50px;
+
+    background-color: green;
+}
+
+.card {
+    max-width: 400px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    background-color: red;
+}
+.card .thumbnail {
+    height: 250px;
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    font-size: 2.5rem;
+    font-weight: bold;
+
+    text-align: center;
+
+    color: var(--BG-COLOR);
+    background-color: lightgreen;
+
+    background-image: url('../images/thumbnail_placeholder_690w.png');
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.card .project-info {
+    width: 100%;
+    padding: 15px;
+
+    flex-wrap: wrap;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    background-color: white;
+    box-shadow: 0px 0px 29px -10px rgba(0,0,0,0.75);
+}
+
+.project-info .project-title {
+    font-size: 1.1rem;
+    font-weight: bold;
+}
+.project-info .project-links {
+    display: flex;
+}
+.project-info .project-links img {
+    width: 30px;
+    height: 30px;
+}
+.project-info .project-desc {
+    margin: 10px 0 10px 0;
+}
 
 /* FOOTER SECTION (contact me) --------------------------------------------------*/
