--- a/src/style.css
+++ b/src/style.css
@@ -99,10 +99,11 @@ main {
 
 .projects {
     width: 100%;
+    max-width: 1500px;
     display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(345px, 1fr));
+    justify-items: center;
     gap: 50px;
-
-    background-color: green;
 }
 
 .card {
@@ -110,8 +111,6 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-
-    background-color: red;
 }
 .card .thumbnail {
     height: 250px;
@@ -121,14 +120,6 @@ main {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
-    font-size: 2.5rem;
-    font-weight: bold;
-
-    text-align: center;
-
-    color: var(--BG-COLOR);
-    background-color: lightgreen;
 
     background-image: url('../images/thumbnail_placeholder_690w.png');
     background-position: center center;
