--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,6 @@
 }
 
 body {
-    padding: 15px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -32,6 +31,7 @@ body {
 /* HEADER SECTION (about me) --------------------------------------------------*/
 
 header {
+    padding: 15px;
     max-width: 700px;
 
     display: flex;
@@ -89,6 +89,7 @@ header {
 /* MAIN SECTION (my work) --------------------------------------------------*/
 
 main {
+    padding: 15px;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -107,7 +108,7 @@ main {
 }
 
 .card {
-    max-width: 400px;
+    max-width: 500px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -155,3 +156,58 @@ main {
 }
 
 /* FOOTER SECTION (contact me) --------------------------------------------------*/
+
+footer {
+    width: 100%;
+
+    display: flex;
+    justify-content: center;
+
+    color: white;
+    background-color: var(--ACCENT-COLOR);
+}
+footer .container {
+    max-width: 1500px;
+
+    flex-wrap: wrap;
+    justify-content: center;
+    display: flex;
+    gap: 20px;
+    font-size: calc(1rem + 0.5vw);
+}
+
+.contact-info {
+    padding: 20px 50px 20px 50px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.contact-info h2 {
+    display: flex;
+    justify-content: center;
+    font-size: calc(1.2rem + 0.5vw);
+}
+.contact-info .socials {
+    filter: invert(100);
+}
+
+.phone {
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.phone::before {
+    width: 30px;
+    height: 30px;
+
+    content: url('../icons/phone.svg');
+    filter: invert(100);
+}
+
+footer .container picture img {
+    display: flex;
+    width: 100%;
+    max-width: 500px;
+}
+
