Fix picture layout being flex-start
push the image to flex end so the end of the
image is lined up with the end of the grid on
desktop view.

--- a/src/style.css
+++ b/src/style.css
@@ -252,4 +252,8 @@ footer .container picture img {
         justify-content: flex-start;
         font-size: calc(1.5rem + 0vw);
     }
+    footer picture {
+        display: flex;
+        justify-content: flex-end;
+    }
 }
